<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hub_page"
    android:orientation="vertical">

    <include
        layout="@layout/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_4"
        android:paddingEnd="@dimen/space_4"
        android:paddingBottom="@dimen/space_4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <include
                layout="@layout/row_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/selectAll"
                    style="@style/Text.BodyStrong"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/touch_min"
                    android:layout_marginEnd="@dimen/space_1"
                    android:layout_weight="1"
                    android:background="@drawable/bg_pill_quiet"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/select_all"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/selectNone"
                    style="@style/Text.BodyStrong"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/touch_min"
                    android:layout_marginStart="@dimen/space_1"
                    android:layout_weight="1"
                    android:background="@drawable/bg_pill_quiet"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/select_none"
                    android:textColor="@color/primary_text" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/space_3"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/appList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/space_3"
                    android:scrollbars="vertical" />

                <LinearLayout
                    android:id="@+id/listEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/space_6"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/listEmptyTitle"
                        style="@style/Text.BodyStrong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/filter_none" />

                    <TextView
                        style="@style/Text.BodyS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_1"
                        android:gravity="center"
                        android:text="@string/no_match_message" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/space_4"
            android:layout_weight="1"
            android:background="@drawable/bg_setting_row"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_3"
            android:paddingTop="@dimen/space_3"
            android:paddingEnd="@dimen/space_3"
            android:paddingBottom="@dimen/space_3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text.TitleM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/preview_title" />

                <TextView
                    style="@style/Text.Meta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_2"
                    android:text="@string/drag_hint" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/previewGrid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/space_2"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/space_3"
                android:scrollbars="vertical" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
